fix jumping of textbox upon entering a multiline message

--- a/web/sass-files/sass/partials/_post.scss
+++ b/web/sass-files/sass/partials/_post.scss
@@ -284,14 +284,14 @@ body.ios {
 		.custom-textarea {
 			padding-top: 8px;
 			padding-right: 28px;
-			max-height: 160px;
+			max-height: 162px !important;
 			overflow: auto;
 			line-height: 1.5;
 		}
 		.textarea-div {
 			padding-top: 8px;
 			padding-right: 30px;
-			max-height: 160px;
+			max-height: 163px !important;
 			overflow: auto;
 			line-height: 1.5;
 		}
